<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:id="@+id/swipeRefreshLayoutOneStock"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockExchangeFill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockAvgVolumeFill"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockExchange" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockAvgVolumeFill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockVolumeFill"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockAvgVolume" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockVolumeFill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockVolume"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockLowFill" app:layout_constraintHorizontal_bias="0.25"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockLowFill"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockLow" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockHighFill"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockPriceFill" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockSymbolFill"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockPrice" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockSymbolFill" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockSymbol"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockCompanyFill"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:text="More info about"
            android:layout_width="382dp"
            android:layout_height="51dp"
            android:id="@+id/txtOneStockWelcome"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.018"
            android:fontFamily="serif" android:textStyle="bold" android:textSize="18sp"
            android:textColor="@color/common_google_signin_btn_text_light_pressed" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.428"/>
    <TextView
            android:text="Company: "
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockCompany"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockWelcome"/>
    <TextView
            android:text="Symbol:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockSymbol" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockCompany"/>
    <TextView
            android:text="High:"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockHigh"
            android:layout_width="80dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockPrice"/>
    <TextView
            android:text="Low:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockLow" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockHigh"/>
    <TextView
            android:text="Volume:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockVolume"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockLow"/>
    <TextView
            android:text="Avg volume:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockAvgVolume" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockVolume" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="Exchange:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockExchange" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockAvgVolume"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="Price:"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockPrice" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockSymbol"/>
    <TextView
            android:text="https://www.nasdaq.com"
            android:layout_width="382dp"
            android:layout_height="35dp"
            android:id="@+id/txtOneStockNasdaqUrl" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockExchange" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.32" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textStyle="italic" android:textAlignment="center"
            android:autoLink="web"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:id="@+id/txtOneStockCompanyFill" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/txtOneStockWelcome"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockCompany" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.25" android:textStyle="bold"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:id="@+id/txtOneStockHighFill"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtOneStockPriceFill"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txtOneStockHigh" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.035"/>

    <RelativeLayout
            android:id="@+id/loadingPanel3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="0dp">

        <ProgressBar
                android:layout_width="63dp"
                android:layout_height="53dp"
                android:indeterminate="true" android:layout_alignParentStart="true" android:layout_marginStart="163dp"
                android:layout_alignParentEnd="true" android:layout_marginEnd="158dp" android:layout_marginTop="212dp"
                android:layout_alignParentTop="true" android:layout_alignParentBottom="true"
                android:layout_marginBottom="246dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.SwipeRefreshLayout>