<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="Search"/>

    <item
            android:id="@+id/navigation_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="History"/>

</menu>