...
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:layout_width="420dp"
            android:layout_height="670dp"
            android:id="@+id/recyclerviewNameList"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSearchStock" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText

            android:inputType="textUri|textPersonName"
            android:ems="10"
...
