...
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:layout_width="285dp"
            android:layout_height="42dp"
            android:id="@+id/txtWelcome" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintVertical_bias="0.017" android:text="STOCKTRADING DATA"
            android:fontFamily="serif" android:typeface="normal" android:textSize="24sp"
            android:textAllCaps="false" android:textStyle="bold"
...

            android:layout_width="400dp"
            android:layout_height="480dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtmostactive" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWebsite" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/recycleviewMostactive"
            app:layout_constraintVertical_bias="0.895"/>


        <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
...
